src/css/mobile.css
:root {
  --max-body-width: 48rem;
}

html {
  block-size: 100%;
  line-height: 1.4;
}

h1,
h2,
h3 {
  line-height: 1.15;
}

body {
  display: flex;
  flex-direction: column;
  inline-size: calc(100% - 1rem);
  max-inline-size: var(--max-body-width);
  min-block-size: 100%;
  margin: 0 auto;
  overflow-wrap: break-word;
}

main {
  flex-grow: 1;
}

img {
  max-inline-size: 100%;
  max-block-size: 100dvb;
}

table {
  display: block;
  overflow-inline: auto;
  scrollbar-gutter: auto;
  overscroll-behavior-inline: auto;
}

pre {
  padding: 1rem;

  /* stylelint-disable declaration-no-important -- Prism hack */
  margin-block: 1rem !important;
  /* stylelint-enable */
  overflow-inline: auto;
  scrollbar-gutter: auto;
  overscroll-behavior-inline: auto;
  line-height: 1.15;
}

code {
  padding: 0.25rem;
}

pre code {
  padding: unset;
}

kbd {
  display: inline-flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
  min-inline-size: 1.5rem;
  max-inline-size: calc(100% - 0.1rem * 2);
  min-block-size: 1.5rem;
  padding: 0 0.25rem;
  margin: 0 0.1rem;
  overflow: hidden;
}

kbd kbd {
  min-inline-size: unset;
  min-block-size: unset;
  padding: 0;
  margin: 0;
}

kbd kbd:not(:first-child) {
  padding-inline-start: 0.25rem;
}

kbd kbd:not(:last-child) {
  padding-inline-end: 0.25rem;
}

iframe {
  inline-size: 100%;
  border: none;
}

dialog {
  max-block-size: calc(100% - 1rem);
  overflow-block: auto;
  scrollbar-gutter: auto;
  overscroll-behavior-block: contain;
  border: none;
}

audio,
video,
embed,
object {
  inline-size: 100%;
}

[type="range"],
meter,
progress {
  display: block;
  inline-size: 100%;
  block-size: 2.25rem;
}

[type="color"] {
  block-size: 2.25rem;
  vertical-align: top;
}

td,
th,
details,
button,
[type="button"],
[type="reset"],
[type="submit"] {
  padding: 0.5rem;
}

/* stylelint-disable-next-line selector-no-qualifying-type -- limit scope to
`input` only */
input:not([type]),
[type="email"],
[type="hidden"],
[type="number"],
[type="password"],
[type="search"],
[type="tel"],
[type="text"],
[type="url"] {
  display: block;
  inline-size: 100%;
  block-size: 2.25rem;
  padding: 0.5rem;
}

[type="file"] {
  display: block;
  inline-size: 100%;
  block-size: 2.25rem;

  /* Works in Chrome (but poorly), doesn't work in Firefox */
  padding-block-start: 0.35rem;
}

[type="date"],
[type="datetime-local"],
[type="time"],
[type="month"],
[type="week"] {
  display: block;
  inline-size: 100%;
  block-size: 2.25rem;

  /* 0.4rem is a hack for mobile Chrome */
  padding: 0.4rem 0.5rem;
}

output {
  display: block;
  inline-size: 100%;
}

textarea {
  display: block;
  inline-size: 100%;
  /* stylelint-disable-next-line unit-disallowed-list -- use `em` intentionally
  to scale with the direct parent */
  min-block-size: 8em;
  padding: 0.5rem;
}

select {
  display: block;
  inline-size: 100%;
  min-block-size: 2.25rem;

  /* "padding: 0.5rem;" messes up the height of selects */
  padding: 0.45rem 0.5rem;
}

summary {
  padding: 0.5rem;
  margin: -0.5rem;
}

[type="image"] {
  vertical-align: bottom;
}

fieldset {
  padding: 0.75rem;
}

label > [type="color"] {
  margin-inline-start: 0.25rem;
}

label {
  display: flex;
  flex-wrap: wrap;
  column-gap: 0.25rem;
  align-items: center;
  inline-size: 100%;
  margin-block-start: 1rem;
}

legend + label {
  margin-block-start: 0;
}

[type="checkbox"] + label,
[type="radio"] + label {
  display: inline-flex;
  flex-wrap: wrap;
  inline-size: unset;
  vertical-align: text-bottom;
}

/* stylelint-disable-next-line plugin/stylelint-group-selectors -- conflicts
with no-descending-specificity */
blockquote > p:first-child,
fieldset > label:first-child {
  margin-block-start: 0;
}

label > [type="checkbox"],
label > [type="radio"] {
  min-block-size: 1rem;
}

blockquote {
  padding: 1rem 2rem;
  margin-inline: 0;
}

blockquote > p:last-child {
  margin-block-end: 0;
}

footer {
  margin-block-start: 1rem;
}

figure > figcaption,
body > header {
  text-align: center;
}

body > footer {
  padding-block-end: 1rem;
  text-align: center;
}

figure {
  margin-inline: 0;
  text-align: center;
}

figure > * {
  text-align: initial;
}

dt,
[aria-current="page"],
[aria-current="step"],
[aria-current="location"],
[aria-current="date"],
[aria-current="time"],
[aria-current="true"] {
  font-weight: 700;
}

dd {
  margin-block-end: 1rem;
}

li {
  margin-block: 0.5rem;
}

picture {
  position: relative;
  inset-inline-start: calc(-50vi + 50%);
  display: block;
  inline-size: 100vi;
  max-block-size: 100dvb;
  text-align: center;
}

/* highlight.js hack */
.hljs {
  /* stylelint-disable-next-line declaration-no-important -- highlight.js hack */
  padding: 1rem !important;
  margin: -1rem;
}

@media (width <= 50rem) {
  table {
    inline-size: calc(100% + 1rem);
    margin-inline-start: -0.5rem;
  }

  video {
    inline-size: calc(100% + 1rem);
    max-block-size: 100dvb;
    margin-inline-start: -0.5rem;
  }

  pre {
    inline-size: calc(100% + 1rem);

    /* stylelint-disable declaration-no-important -- Prism hack */
    padding-inline: 0.5rem !important;
    margin-inline-start: -0.5rem !important;
    /* stylelint-enable */
  }

  /* highlight.js hack */
  .hljs {
    /* stylelint-disable-next-line declaration-no-important -- highlight.js hack */
    padding-inline: 0.5rem !important;
    margin: -1rem -0.5rem;
  }
}

